syntax = "proto3";

package pb;

service Auth {
    rpc SignIn (SignInRequest) returns (SignInResponse) {}
}

message SignInRequest {
    string login = 1;
    string password = 2;
    string ip = 3;
}

message SignInResponse {
    bool ok = 1;
}